--- a/extension-manifest-v3/src/_locales/zh_CN/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_CN/messages.json
@@ -86,7 +86,7 @@
     "message": "成为贡献者"
   },
   "block_all": {
-    "message": "Block all"
+    "message": "全部拦截"
   },
   "block_all__recommended_": {
     "message": "阻止所有（推荐）"
@@ -128,7 +128,7 @@
     "message": "折叠"
   },
   "coming_soon": {
-    "message": "coming soon"
+    "message": "即将推出！"
   },
   "comments": {
     "message": "评论",
@@ -471,7 +471,7 @@
     "message": "隐私保护"
   },
   "protection": {
-    "message": "protection"
+    "message": "保护"
   },
   "protection_exceptions": {
     "message": "保护的例外情况"
@@ -496,6 +496,9 @@
   },
   "resume": {
     "message": "继续"
+  },
+  "resume_protection": {
+    "message": "履历保护"
   },
   "save": {
     "message": "保存"
@@ -541,7 +544,7 @@
     "description": "Tracker category name"
   },
   "site_is_trusted": {
-    "message": "Site is trusted"
+    "message": "该站点是可信的"
   },
   "social_media": {
     "message": "社交媒体",
@@ -594,7 +597,7 @@
     "message": "信任此网站"
   },
   "trust_this_site": {
-    "message": "Trust this site"
+    "message": "信任此网站"
   },
   "trusted": {
     "message": "受信任"
