--- a/extension-manifest-v3/src/_locales/zh_TW/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_TW/messages.json
@@ -86,7 +86,7 @@
     "message": "成為捐助者"
   },
   "block_all": {
-    "message": "Block all"
+    "message": "封鎖全部"
   },
   "block_all__recommended_": {
     "message": "阻止所有（推薦）"
@@ -128,7 +128,7 @@
     "message": "折疊"
   },
   "coming_soon": {
-    "message": "coming soon"
+    "message": "即將推出"
   },
   "comments": {
     "message": "評論",
@@ -471,7 +471,7 @@
     "message": "隱私權保護"
   },
   "protection": {
-    "message": "protection"
+    "message": "保護"
   },
   "protection_exceptions": {
     "message": "保護的例外情況"
@@ -496,6 +496,9 @@
   },
   "resume": {
     "message": "恢復"
+  },
+  "resume_protection": {
+    "message": "履歷保護"
   },
   "save": {
     "message": "儲存"
@@ -541,7 +544,7 @@
     "description": "Tracker category name"
   },
   "site_is_trusted": {
-    "message": "Site is trusted"
+    "message": "網站是可信的"
   },
   "social_media": {
     "message": "社交媒體",
@@ -594,7 +597,7 @@
     "message": "信任此網站"
   },
   "trust_this_site": {
-    "message": "Trust this site"
+    "message": "信任此網站"
   },
   "trusted": {
     "message": "已信任"
