--- a/extension-manifest-v3/src/_locales/en/messages.json
+++ b/extension-manifest-v3/src/_locales/en/messages.json
@@ -497,6 +497,9 @@
   "resume": {
     "message": "Resume"
   },
+  "resume_protection": {
+    "message": "Resume protection"
+  },
   "save": {
     "message": "Save"
   },
