--- a/extension-manifest-v3/src/_locales/de/messages.json
+++ b/extension-manifest-v3/src/_locales/de/messages.json
@@ -85,6 +85,9 @@
   "become_a_contributor": {
     "message": "Werde Ghostery-Förderer"
   },
+  "block_all": {
+    "message": "Alle blockieren"
+  },
   "block_all__recommended_": {
     "message": "Alle blockieren (empfohlen)"
   },
@@ -123,6 +126,9 @@
   },
   "collapse": {
     "message": "Weniger anzeigen"
+  },
+  "coming_soon": {
+    "message": "Demnächst verfügbar!"
   },
   "comments": {
     "message": "Kommentare",
@@ -464,6 +470,9 @@
   "privacy_protection": {
     "message": "Datenschutz"
   },
+  "protection": {
+    "message": "Schutz"
+  },
   "protection_exceptions": {
     "message": "Schutzausnahmen"
   },
@@ -487,6 +496,9 @@
   },
   "resume": {
     "message": "Fortsetzen"
+  },
+  "resume_protection": {
+    "message": "Schutz fortsetzen"
   },
   "save": {
     "message": "Speichern"
@@ -530,6 +542,9 @@
   "site_analytics": {
     "message": "Website-Analytics",
     "description": "Tracker category name"
+  },
+  "site_is_trusted": {
+    "message": "Website ist vertrauenswürdig"
   },
   "social_media": {
     "message": "Social Media",
@@ -580,6 +595,9 @@
   },
   "trust_on_this_website": {
     "message": "Auf dieser Website vertrauen"
+  },
+  "trust_this_site": {
+    "message": "Vertraue dieser Website"
   },
   "trusted": {
     "message": "Vertrauenswürdig"
