--- a/extension-manifest-v3/src/_locales/pt_BR/messages.json
+++ b/extension-manifest-v3/src/_locales/pt_BR/messages.json
@@ -85,6 +85,9 @@
   "become_a_contributor": {
     "message": "Seja um colaborador"
   },
+  "block_all": {
+    "message": "Bloquear tudo"
+  },
   "block_all__recommended_": {
     "message": "Bloquear tudo (recomendado)"
   },
@@ -123,6 +126,9 @@
   },
   "collapse": {
     "message": "Recolher"
+  },
+  "coming_soon": {
+    "message": "Em breve!"
   },
   "comments": {
     "message": "Comentários",
@@ -464,6 +470,9 @@
   "privacy_protection": {
     "message": "Proteção de privacidade"
   },
+  "protection": {
+    "message": "proteção"
+  },
   "protection_exceptions": {
     "message": "Exceções de proteção"
   },
@@ -487,6 +496,9 @@
   },
   "resume": {
     "message": "Retomar"
+  },
+  "resume_protection": {
+    "message": "Proteção de currículo"
   },
   "save": {
     "message": "Salvar"
@@ -530,6 +542,9 @@
   "site_analytics": {
     "message": "Analítica do site",
     "description": "Tracker category name"
+  },
+  "site_is_trusted": {
+    "message": "Site é confiável"
   },
   "social_media": {
     "message": "Mídia Social",
@@ -580,6 +595,9 @@
   },
   "trust_on_this_website": {
     "message": "Confiar nesse site"
+  },
+  "trust_this_site": {
+    "message": "Confie neste site"
   },
   "trusted": {
     "message": "Confiável"
