--- a/extension-manifest-v3/src/_locales/ko/messages.json
+++ b/extension-manifest-v3/src/_locales/ko/messages.json
@@ -85,6 +85,9 @@
   "become_a_contributor": {
     "message": "기부자가 되세요."
   },
+  "block_all": {
+    "message": "모두 차단"
+  },
   "block_all__recommended_": {
     "message": "모두 차단(권장)"
   },
@@ -123,6 +126,9 @@
   },
   "collapse": {
     "message": "접기"
+  },
+  "coming_soon": {
+    "message": "곧 제공됩니다!"
   },
   "comments": {
     "message": "댓글",
@@ -464,6 +470,9 @@
   "privacy_protection": {
     "message": "개인정보 보호"
   },
+  "protection": {
+    "message": "보호"
+  },
   "protection_exceptions": {
     "message": "보호 예외사항"
   },
@@ -487,6 +496,9 @@
   },
   "resume": {
     "message": "다시 시작 "
+  },
+  "resume_protection": {
+    "message": "이력서 보호"
   },
   "save": {
     "message": "저장"
@@ -530,6 +542,9 @@
   "site_analytics": {
     "message": "사이트 분석 ",
     "description": "Tracker category name"
+  },
+  "site_is_trusted": {
+    "message": "사이트는 신뢰할 수 있습니다"
   },
   "social_media": {
     "message": "소셜 미디어 ",
@@ -580,6 +595,9 @@
   },
   "trust_on_this_website": {
     "message": "이 웹사이트상에서 신뢰"
+  },
+  "trust_this_site": {
+    "message": "이 사이트를 신뢰하십시오"
   },
   "trusted": {
     "message": "신뢰할 수 있는 사이트"
