--- a/extension-manifest-v3/src/_locales/zh_CN/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_CN/messages.json
@@ -616,6 +616,9 @@
   "trusted_on_this_website": {
     "message": "在此网站上受信任"
   },
+  "undo": {
+    "message": "撤消"
+  },
   "unidentified": {
     "message": "未识别",
     "description": "Tracker category name"
