--- a/extension-manifest-v3/src/_locales/en/messages.json
+++ b/extension-manifest-v3/src/_locales/en/messages.json
@@ -616,6 +616,9 @@
   "trusted_on_this_website": {
     "message": "Trusted on this website"
   },
+  "undo": {
+    "message": "Undo"
+  },
   "unidentified": {
     "message": "Unidentified",
     "description": "Tracker category name"
