--- a/extension-manifest-v3/src/_locales/fr/messages.json
+++ b/extension-manifest-v3/src/_locales/fr/messages.json
@@ -616,6 +616,9 @@
   "trusted_on_this_website": {
     "message": "Autorisés sur ce site web"
   },
+  "undo": {
+    "message": "Annuler"
+  },
   "unidentified": {
     "message": "Non identifié",
     "description": "Tracker category name"
