--- a/extension-manifest-v3/src/_locales/it/messages.json
+++ b/extension-manifest-v3/src/_locales/it/messages.json
@@ -616,6 +616,9 @@
   "trusted_on_this_website": {
     "message": "Considerati affidabili su questo sito"
   },
+  "undo": {
+    "message": "Annulla"
+  },
   "unidentified": {
     "message": "Non identificato",
     "description": "Tracker category name"
