--- a/extension-manifest-v3/src/_locales/ja/messages.json
+++ b/extension-manifest-v3/src/_locales/ja/messages.json
@@ -616,6 +616,9 @@
   "trusted_on_this_website": {
     "message": "このウェブサイトで信頼済み"
   },
+  "undo": {
+    "message": "元に戻す"
+  },
   "unidentified": {
     "message": "未知",
     "description": "Tracker category name"
