--- a/extension-manifest-v3/src/_locales/ko/messages.json
+++ b/extension-manifest-v3/src/_locales/ko/messages.json
@@ -616,6 +616,9 @@
   "trusted_on_this_website": {
     "message": "이 웹사이트상에서 신뢰됨"
   },
+  "undo": {
+    "message": "실행 취소 "
+  },
   "unidentified": {
     "message": "알 수 없음",
     "description": "Tracker category name"
