--- a/extension-manifest-v3/src/_locales/pl/messages.json
+++ b/extension-manifest-v3/src/_locales/pl/messages.json
@@ -597,7 +597,7 @@
     "message": "Zaufaj na tej stronie"
   },
   "trust_this_site": {
-    "message": "Zaufaj na tej stronie"
+    "message": "Zaufaj tej stronie"
   },
   "trusted": {
     "message": "Zaufany"
